--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "5.0.1",
+		"sass": "^1.55.0",
+		"scss": "^0.2.4",
 		"validator": "^13.7.0",
 		"web-vitals": "^2.1.4"
 	},
