--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
+		"react-particles": "^2.3.3",
 		"react-router-dom": "^6.0.1",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
+		"react-type-animation": "^2.1.1",
 		"sass": "^1.55.0",
 		"scss": "^0.2.4",
+		"tsparticles": "^2.3.4",
 		"validator": "^13.7.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": " react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
