--- a/src/components/pages/portfolio/projects.json
+++ b/src/components/pages/portfolio/projects.json
@@ -1,6 +1,26 @@
 [
 	{
-		"id": 1,
+		"name": "recycled.gg",
+		"body": "A static site for a World of Warcraft Guild. The focus was on building a modern, mobile friendly site to look at the guild members while learning Material UI",
+		"img": "https://i.imgur.com/R2topER.png",
+		"deploy": "https://recycled.netlify.app/",
+		"github": "https://github.com/Ccatalyst/recycled.gg"
+	},
+	{
+		"name": "Markdown Generator",
+		"body": "A node.js application using inquirer to build a README for a repository.",
+		"img": "https://i.imgur.com/gpdkro8.png",
+		"deploy": "https://www.youtube.com/watch?v=bKQhTpOltik",
+		"github": "https://github.com/Ccatalyst/Markdown-Generator"
+	},
+	{
+		"name": "Friender",
+		"body": "A full stack social media site focused on finding friends based on your hobby.",
+		"img": "https://i.imgur.com/yeIUxGo.png",
+		"deploy": "https://app-friender.herokuapp.com/",
+		"github": "https://github.com/samanthajrexroat/Friender"
+	},
+	{
 		"name": "DiscCover",
 		"body": "A basic website that uses the Shazam API and Youtube API to find similar artists to the searched song or artist. Built using JQuery.",
 		"img": "https://i.imgur.com/8VeGoPp.png",
@@ -8,7 +28,6 @@
 		"github": "https://github.com/samanthajrexroat/DiscCover"
 	},
 	{
-		"id": 2,
 		"name": "Find Your Next Pet",
 		"body": "A site built using HandlbarsJs. It searches for cats or dogs up for adoption via an API run by Purina Pet Foods",
 		"img": "https://i.imgur.com/u3cLMG8.png",
@@ -16,7 +35,6 @@
 		"github": "https://github.com/Ccatalyst/Find-Your-Next-Pet"
 	},
 	{
-		"id": 3,
 		"name": "Social Network API",
 		"body": "A backend project using MongoDB and Mongoose. An API that has users who can post &quot;thoughts&quot;, and have other users respond to the thoughts with responses. Allows for users to add friends as well.",
 		"img": "https://i.imgur.com/BxowT6s.png",
@@ -24,7 +42,6 @@
 		"github": "https://github.com/Ccatalyst/Social-Network-API"
 	},
 	{
-		"id": 4,
 		"name": "Regex URL Tutorial",
 		"body": "A tutorial covering regular expressions for URLs. Outlines an expression that allows for the inclusion/exclusion of portions of a url, such as &quot;http&quot;.",
 		"img": "https://i.imgur.com/8fo2w7U.png",
@@ -32,7 +49,6 @@
 		"github": "https://github.com/Ccatalyst/Rejex-Tutorial"
 	},
 	{
-		"id": 5,
 		"name": "Employee Tracker",
 		"body": "A backend application based on nodejs and SQL that allows for manipulation of employees&apos; job information within a company.",
 		"img": "https://i.imgur.com/V8FiMhj.png",
