--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@emotion/styled": "^11.10.4",
 		"@fontsource/raleway": "^4.5.11",
 		"@fontsource/roboto": "^4.5.8",
+		"@fontsource/roboto-mono": "^4.5.8",
 		"@mui/icons-material": "^5.10.6",
 		"@mui/material": "^5.10.8",
 		"react": "^18.0.0",
