--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@mui/icons-material": "^5.10.6",
 		"@mui/material": "^5.10.8",
 		"react": "^18.0.0",
+		"react-code-blocks": "^0.0.9-0",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.6.0",
 		"react-particles": "^2.3.3",
