--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"@fontsource/roboto-mono": "^4.5.8",
 		"@mui/icons-material": "^5.10.6",
 		"@mui/material": "^5.10.8",
+		"@types/jest": "^29.2.5",
+		"@types/node": "^18.11.18",
+		"@types/react": "^18.0.26",
+		"@types/react-dom": "^18.0.10",
 		"react": "^18.0.0",
 		"react-code-blocks": "^0.0.9-0",
 		"react-dom": "^18.0.0",
@@ -22,6 +26,7 @@
 		"sass": "^1.55.0",
 		"scss": "^0.2.4",
 		"tsparticles": "^2.3.4",
+		"typescript": "^4.9.4",
 		"validator": "^13.7.0",
 		"web-vitals": "^2.1.4"
 	},
