--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"sass": "^1.55.0",
 		"scss": "^0.2.4",
 		"tsparticles": "^2.3.4",
+		"typewriter-effect": "^2.19.0",
 		"validator": "^13.7.0",
 		"web-vitals": "^2.1.4"
 	},
