--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
 	"compilerOptions": {
+		"jsx": "react",
+
 		/* Visit https://aka.ms/tsconfig to read more about this file */
 
 		/* Projects */
@@ -99,5 +101,6 @@
 		/* Completeness */
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
-	}
+	},
+	"include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
