--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emailjs/browser": "^3.10.0",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@fontsource/raleway": "^4.5.11",
@@ -15,6 +16,11 @@
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
+		"dotenv": "^16.0.3",
+		"dotenv-webpack": "^8.0.1",
+		"fs": "^0.0.1-security",
+		"os": "^0.1.2",
+		"path": "^0.12.7",
 		"react": "^18.0.0",
 		"react-code-blocks": "^0.0.9-0",
 		"react-dom": "^18.0.0",
