--- a/src/components/pages/portfolio/projects.json
+++ b/src/components/pages/portfolio/projects.json
@@ -1,10 +1,31 @@
 [
 	{
+		"name": "Friender",
+		"body": "A full stack social media site focused on finding friends based on your hobby.",
+		"img": "https://i.imgur.com/yeIUxGo.png",
+		"deploy": "https://app-friender.herokuapp.com/",
+		"github": "https://github.com/samanthajrexroat/Friender"
+	},
+	{
+		"name": "Find Your Next Pet",
+		"body": "A site built using HandlebarsJs. It searches for cats or dogs up for adoption via an API run by Purina Pet Foods",
+		"img": "https://i.imgur.com/u3cLMG8.png",
+		"deploy": "https://find-your-next-friend.herokuapp.com/",
+		"github": "https://github.com/Ccatalyst/Find-Your-Next-Pet"
+	},
+	{
 		"name": "recycled.gg",
 		"body": "A static site for a World of Warcraft Guild. The focus was on building a modern, mobile friendly site to look at the guild members while learning Material UI",
 		"img": "https://i.imgur.com/R2topER.png",
 		"deploy": "https://recycled.netlify.app/",
 		"github": "https://github.com/Ccatalyst/recycled.gg"
+	},
+	{
+		"name": "Custom Post Type WordPress Plugin",
+		"body": "A Wordpress plugin that will call an API and present the data that is returned to be viewed and edited. Built using php.",
+		"img": "https://i.imgur.com/cj1kyay.png",
+		"deploy": "",
+		"github": "https://github.com/Ccatalyst/Custom-Post-Type-Plugin"
 	},
 	{
 		"name": "Markdown Generator",
@@ -14,25 +35,11 @@
 		"github": "https://github.com/Ccatalyst/Markdown-Generator"
 	},
 	{
-		"name": "Friender",
-		"body": "A full stack social media site focused on finding friends based on your hobby.",
-		"img": "https://i.imgur.com/yeIUxGo.png",
-		"deploy": "https://app-friender.herokuapp.com/",
-		"github": "https://github.com/samanthajrexroat/Friender"
-	},
-	{
 		"name": "DiscCover",
 		"body": "A basic website that uses the Shazam Music API and Youtube API to find similar artists to the searched song or artist. Built using JQuery.",
 		"img": "https://i.imgur.com/8VeGoPp.png",
 		"deploy": "https://samanthajrexroat.github.io/DiscCover/",
 		"github": "https://github.com/samanthajrexroat/DiscCover"
-	},
-	{
-		"name": "Find Your Next Pet",
-		"body": "A site built using HandlebarsJs. It searches for cats or dogs up for adoption via an API run by Purina Pet Foods",
-		"img": "https://i.imgur.com/u3cLMG8.png",
-		"deploy": "https://find-your-next-friend.herokuapp.com/",
-		"github": "https://github.com/Ccatalyst/Find-Your-Next-Pet"
 	},
 	{
 		"name": "Social Network API",
