--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "personalportfolio",
 	"homepage": "/",
-	"version": "0.1.0",
+	"version": "1.0",
 	"private": true,
 	"dependencies": {
 		"@emailjs/browser": "^3.10.0",
@@ -30,14 +30,12 @@
 		"react-scripts": "^5.0.1",
 		"sass": "^1.55.0",
 		"scss": "^0.2.4",
-		"tsparticles": "^2.5.1",
 		"typewriter-effect": "^2.19.0",
-		"validator": "^13.7.0",
-		"web-vitals": "^2.1.4"
+		"validator": "^13.7.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "GENERATE_SOURCEMAP=false react-scripts build",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
